--- a/src/package.json
+++ b/src/package.json
@@ -6,10 +6,13 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.5",
+    "date-and-time": "^1.0.1",
+    "diff": "^5.0.0",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "express-session": "^1.17.2",
     "multer": "^1.4.2",
+    "sanitize-html": "^2.4.0",
     "sequelize": "^6.6.4",
     "sequelize-cli": "^6.2.0",
     "sqlite3": "^5.0.2"
