--- a/src/package.json
+++ b/src/package.json
@@ -1,6 +1,6 @@
 {
   "name": "wikiengine",
-  "version": "0.1 alpha",
+  "version": "0.2",
   "description": "Wiki engine",
   "main": "server.js",
   "dependencies": {
@@ -12,6 +12,7 @@
     "diff": "^5.0.0",
     "diff2html": "^3.4.7",
     "ejs": "^3.1.6",
+    "eslint": "^7.31.0",
     "express": "^4.17.1",
     "express-session": "^1.17.2",
     "express-session-sequelize": "^2.3.0",
@@ -20,7 +21,8 @@
     "sanitize-html": "^2.4.0",
     "sequelize": "^6.6.4",
     "sequelize-cli": "^6.2.0",
-    "sqlite3": "^5.0.2"
+    "sqlite3": "^5.0.2",
+    "svg-captcha": "^1.4.0"
   },
   "devDependencies": {},
   "scripts": {
