--- a/src/package.json
+++ b/src/package.json
@@ -1,6 +1,6 @@
 {
   "name": "wikiengine",
-  "version": "v0.2",
+  "version": "0.3",
   "description": "Wiki engine",
   "main": "server.js",
   "dependencies": {
