--- a/src/package.json
+++ b/src/package.json
@@ -1,6 +1,6 @@
 {
   "name": "wikiengine",
-  "version": "0.5b",
+  "version": "0.6",
   "description": "Wiki engine",
   "main": "server.js",
   "dependencies": {
