--- a/src/package.json
+++ b/src/package.json
@@ -8,21 +8,30 @@
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.5",
     "csurf": "^1.11.0",
-    "date-and-time": "^1.0.1",
+    "date-and-time": "^2.0.0",
     "diff": "^5.0.0",
-    "diff2html": "^3.4.7",
+    "diff2html": "^3.4.9",
     "ejs": "^3.1.6",
-    "eslint": "^7.31.0",
+    "eslint": "^7.32.0",
     "express": "^4.17.1",
     "express-session": "^1.17.2",
     "express-session-sequelize": "^2.3.0",
+    "express-socket.io-session": "^1.3.5",
+    "highlight.js": "^11.2.0",
+    "ip-address": "^8.1.0",
     "ip-range-check": "^0.2.0",
-    "multer": "^1.4.2",
+    "levdist": "^2.2.10",
+    "mariadb": "^2.5.4",
+    "multer": "^1.4.3",
+    "node-gyp": "^8.1.0",
+    "node-pre-gyp": "^0.17.0",
     "sanitize-html": "^2.4.0",
     "sequelize": "^6.6.4",
     "sequelize-cli": "^6.2.0",
+    "socket.io": "^4.1.3",
     "sqlite3": "^5.0.2",
-    "svg-captcha": "^1.4.0"
+    "svg-captcha": "^1.4.0",
+    "tar": "^6.1.8"
   },
   "devDependencies": {},
   "scripts": {
