--- a/src/package.json
+++ b/src/package.json
@@ -20,6 +20,7 @@
     "highlight.js": "^11.2.0",
     "ip-address": "^8.1.0",
     "ip-range-check": "^0.2.0",
+    "katex": "^0.15.1",
     "levdist": "^2.2.10",
     "mariadb": "^2.5.4",
     "multer": "^1.4.3",
