--- a/src/LocalSettings_Example.json
+++ b/src/LocalSettings_Example.json
@@ -5,7 +5,7 @@
     "dateTimeFormat": "YYYY/MM/DD HH:mm:ss",
     "licence": "CC BY-SA 4.0",
     "session_secret": "secret for encrypting sessions. This must NOT be exposed.",
-    "adminEmail": "admin@gecwiki.kr",
+    "adminEmail": "admin@localhost",
     "database": {
         "_comment": "This section is concerned with database connections. Database type can either be mariadb OR sqlite.",
         "type": "mariadb",
