--- a/src/package.json
+++ b/src/package.json
@@ -30,6 +30,7 @@
     "sequelize": "^6.6.4",
     "sequelize-cli": "^5.0.0",
     "socket.io": "^4.1.3",
+    "sqlite3": "^5.0.2",
     "svg-captcha": "^1.4.0",
     "tar": "^6.1.8"
   },
