--- a/src/package.json
+++ b/src/package.json
@@ -5,6 +5,7 @@
   "main": "server.js",
   "dependencies": {
     "arraywrap": "^1.0.0",
+    "axios": "^0.25.0",
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.5",
     "csurf": "^1.11.0",
