--- a/src/package.json
+++ b/src/package.json
@@ -19,6 +19,7 @@
     "express-session-sequelize": "^2.3.0",
     "express-socket.io-session": "^1.3.5",
     "highlight.js": "^11.2.0",
+    "html-minifier": "^4.0.0",
     "ip-address": "^8.1.0",
     "ip-range-check": "^0.2.0",
     "katex": "^0.15.1",
