--- a/.gitignore
+++ b/.gitignore
@@ -116,3 +116,4 @@ src/public/boarduploads/*
 LocalSettings.json
 google3cb516e66b73224c.html 
 naver3e0ac11747bec50c1fe96401d179952c.html 
+favicon.ico
